--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 appdirs==1.4.4
 asn1crypto==1.3.0
-beem==0.24.5
+beem==0.24.9
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 click-shell==2.0
 diff-match-patch==20200713
+Dumper==1.2.0
 ecdsa==0.15
 Events==0.3
 Flask==1.1.2
