--- a/requirements.txt
+++ b/requirements.txt
@@ -15,17 +15,30 @@ Flask-Session==0.3.2
 flask-talisman==0.7.0
 Flask-WTF==0.14.3
 future==0.18.2
+gcloud==0.18.3
+googleapis-common-protos==1.52.0
 gunicorn==20.0.4
+httplib2==0.18.1
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jws==0.1.3
 MarkupSafe==1.1.1
+oauth2client==4.1.2
 prettytable==0.7.2
+protobuf==3.14.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycryptodome==3.9.9
 pycryptodomex==3.9.8
 pylibscrypt==1.8.0
+Pyrebase4==4.4.1
+python-jwt==2.0.1
 pytz==2020.1
 PyYAML==5.3.1
 requests==2.24.0
+requests-toolbelt==0.9.1
+rsa==4.6
 scrypt==0.8.15
 six==1.15.0
 urllib3==1.25.9
