--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
+amqp==5.0.2
 appdirs==1.4.4
 asn1crypto==1.3.0
 beem==0.24.9
+billiard==3.6.3.0
 boto3==1.16.27
 botocore==1.19.27
 cachelib==0.1.1
+celery==5.0.5
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.1.6
 click-shell==2.0
 diff-match-patch==20200713
 Dumper==1.2.0
@@ -26,9 +32,11 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 jmespath==0.10.0
 jws==0.1.3
+kombu==5.0.2
 MarkupSafe==1.1.1
 oauth2client==4.1.2
 prettytable==0.7.2
+prompt-toolkit==3.0.8
 protobuf==3.14.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -48,6 +56,8 @@ s3transfer==0.3.3
 scrypt==0.8.15
 six==1.15.0
 urllib3==1.25.9
+vine==5.0.0
+wcwidth==0.2.5
 websocket-client==0.57.0
 Werkzeug==1.0.1
 WTForms==2.3.1
