--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 amqp==5.0.2
 appdirs==1.4.4
 asn1crypto==1.3.0
-beem==0.24.9
+beem==0.24.20
 billiard==3.6.3.0
 boto3==1.16.27
 botocore==1.19.27
@@ -33,8 +33,10 @@ Jinja2==2.11.2
 jmespath==0.10.0
 jws==0.1.3
 kombu==5.0.2
+Markdown==3.3.4
 MarkupSafe==1.1.1
 oauth2client==4.1.2
+Pillow==8.3.1
 prettytable==0.7.2
 prompt-toolkit==3.0.8
 protobuf==3.14.0
@@ -52,6 +54,8 @@ PyYAML==5.3.1
 requests==2.24.0
 requests-toolbelt==0.9.1
 rsa==4.6
+ruamel.yaml==0.16.13
+ruamel.yaml.clib==0.2.2
 s3transfer==0.3.3
 scrypt==0.8.15
 six==1.15.0
