--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,9 @@ boto3==1.16.27
 botocore==1.19.27
 cachelib==0.1.1
 celery==5.0.5
-certifi==2020.6.20
+certifi==2021.5.30
 chardet==3.0.4
+charset-normalizer==2.0.3
 click==7.1.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
@@ -26,10 +27,10 @@ future==0.18.2
 gcloud==0.18.3
 googleapis-common-protos==1.52.0
 gunicorn==20.0.4
-httplib2==0.19.0
-idna==2.10
+httplib2==0.18.1
+idna==3.2
 itsdangerous==1.1.0
-Jinja2==2.11.3
+Jinja2==2.11.2
 jmespath==0.10.0
 jws==0.1.3
 kombu==5.0.2
@@ -50,16 +51,16 @@ python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-jwt==2.0.1
 pytz==2020.1
-PyYAML==5.4
-requests==2.24.0
+PyYAML==5.3.1
+requests==2.26.0
 requests-toolbelt==0.9.1
-rsa==4.7
+rsa==4.6
 ruamel.yaml==0.16.13
 ruamel.yaml.clib==0.2.2
 s3transfer==0.3.3
 scrypt==0.8.15
 six==1.15.0
-urllib3==1.26.5
+urllib3==1.26.6
 vine==5.0.0
 wcwidth==0.2.5
 websocket-client==0.57.0
