Change daily report image to use pexels.com API

--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ kombu==5.0.2
 Markdown==3.3.4
 MarkupSafe==1.1.1
 oauth2client==4.1.2
+pexels-api==1.0.1
 Pillow==8.3.1
 prettytable==0.7.2
 prompt-toolkit==3.0.8
@@ -65,4 +66,5 @@ vine==5.0.0
 wcwidth==0.2.5
 websocket-client==0.57.0
 Werkzeug==1.0.1
+wget==3.2
 WTForms==2.3.1
