--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-amqp==5.0.2
+amqp==5.0.9
 appdirs==1.4.4
 asn1crypto==1.3.0
 beem==0.24.20
-billiard==3.6.3.0
+billiard==3.6.4.0
 boto3==1.16.27
 botocore==1.19.27
 cachelib==0.1.1
-celery==5.2.2
+celery==5.2.3
 certifi==2021.5.30
 chardet==3.0.4
 charset-normalizer==2.0.3
-click==7.1.2
+click==8.0.4
 click-didyoumean==0.0.3
 click-plugins==1.1.1
-click-repl==0.1.6
+click-repl==0.2.0
 click-shell==2.0
 diff-match-patch==20200713
 Dumper==1.2.0
@@ -33,25 +33,26 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 jmespath==0.10.0
 jws==0.1.3
-kombu==5.0.2
+kombu==5.2.3
 Markdown==3.3.4
 MarkupSafe==1.1.1
 oauth2client==4.1.2
 pexels-api==1.0.1
-Pillow==9.0.0
+Pillow==8.3.1
 prettytable==0.7.2
 prompt-toolkit==3.0.8
-protobuf==3.15.0
+protobuf==3.14.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycryptodome==3.9.9
 pycryptodomex==3.9.8
 pylibscrypt==1.8.0
+pyparsing==2.4.7
 Pyrebase4==4.4.1
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-jwt==2.0.1
-pytz==2020.1
+pytz==2021.3
 PyYAML==5.4
 requests==2.26.0
 requests-toolbelt==0.9.1
